Setup navigation between screens.

--- a/breaking-bad-characters/app/src/main/res/values/strings.xml
+++ b/breaking-bad-characters/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Breaking Bad characters</string>
+    <string name="character_details_screen_caption">Character details</string>
 </resources>
