--- a/breaking-bad-characters/app/src/main/res/values/strings.xml
+++ b/breaking-bad-characters/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="image_loading">Image loading…</string>
     <string name="loading_error_message">Oops, something went wrong. Please try to reload.</string>
     <string name="reload_button">Reload</string>
+    <string name="search_hint">Search characters by name</string>
+    <string name="menu_action_search">Search</string>
+    <string name="nothing_was_found_message">Nothing was found.</string>
 </resources>
